# agents

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  ETHOS.md  GETTING-STARTED.md  README.md  agents_registry.json  pyproject.toml
.claude/agents/: context-manager.md  investigator.md  local-review.md  reviewer.md  shipper.md  ux.md
.claude/commands/: agency-run.md  context-manager.md  hire-team.md  investigator.md  reviewer.md  shipper.md
docs/: handoff-chain.md  modes.md
scripts/: validate.sh
sdk/navox/: cli.py  orchestrator.py
sdk/tests/: test_orchestrator.py
src/navox_agents/: client.py  server.py
src/navox_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/navox_agents/models/: __init__.py  handoff_contract.py
src/navox_agents/validators/: contract_checker.py
tests/: test_models.py  test_server_client.py
traffic-data/exports/: 2026-05-28_to_2026-06-11-traffic.csv
traffic-data/memory/: brief-actions.json
traffic-data/reports/: 2026-06-11-report.md
